pkg/chisel/testdata/valid/65_color_hex.chisel
sphere.color(#ff8800)
