pkg/chisel/testdata/errors/07_invalid_hex_color.chisel
sphere.color(#12345)
